# llm-inception

./: LICENSE  README.md  llm_inception.py  pyproject.toml  setup.cfg
llm_inception.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
