[project]
name = "llm-inception"
version = "0.2.1"
description = "Run prompts against LLMs hosted by Inception Labs (https://inceptionlabs.ai/) with diffusing animation"
readme = "README.md"
authors = [{name = "NickMystic"}]
license = {file = "LICENSE.md"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities",
]
requires-python = ">=3.9"
dependencies = [
    "llm>=0.22",
    "httpx",
    "httpx-sse",
    "rich>=13.0",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/ghostofpokemon/llm-inception"
Repository = "https://github.com/ghostofpokemon/llm-inception"
Changelog = "https://github.com/ghostofpokemon/llm-inception/releases"
Issues = "https://github.com/ghostofpokemon/llm-inception/issues"

[project.entry-points.llm]
inception = "llm_inception"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-httpx", 
    "pytest-asyncio",
]